--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ img {
   max-width: 100%;
 }
 
+/* UTILS */
+
+.flex {
+  display: flex;
+}
+
 /* MAIN */
 
 main {
@@ -55,4 +61,71 @@ footer {
 
 footer > div {
   margin: 0 1rem;
+}
+
+.sinister-img {
+  width: 40px;
+  margin: 0 1rem 0 0;
+}
+
+.title-song {
+  align-items: center;
+}
+
+.name-song {
+  line-height: 0.8rem;
+}
+
+.singer {
+  font-size: 0.7rem;
+  margin-top: 0;
+  color: gray;
+}
+
+.footer-icon {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  color: gray;
+}
+
+.player {
+  width: 25%;
+}
+
+.player-simbol {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  height: 50%;
+}
+
+.duration {
+  justify-content: space-around;
+  align-items: flex-start;
+  height: 50%;
+}
+
+.duration-bar {
+  border: solid white 3px;
+  width: 70%;
+  margin-top: 0.5rem;
+  border-radius: 50px;
+}
+
+.duration p {
+  margin-top: 0;
+}
+
+.sound {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 15%;
+}
+
+.sound-bar {
+  border: solid white 3px;
+  width: 40%;
+
+  border-radius: 50px;
 }
