--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,18 @@ header {
   width: 100%;
   height: 80px;
   background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.upgrade {
+  border: solid whitesmoke 1px;
+  border-radius: 50px;
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+  background-color: transparent;
+  color: whitesmoke;
 }
 
 /* SONG SECTION */
@@ -57,6 +69,7 @@ header {
 .side-bar {
   color: whitesmoke;
   position: relative;
+  font-size: 0.8rem;
 }
 
 .home {
@@ -68,12 +81,16 @@ header {
 }
 
 .icon-menu {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   padding-right: 1rem;
 }
 
 .home-flex {
   align-items: center;
+}
+
+.playlist-name {
+  overflow-x: auto;
 }
 
 .playlist h3 {
@@ -94,6 +111,13 @@ header {
   bottom: 0;
   right: 0;
   left: 0;
+  z-index: 1;
+  background-color: black;
+}
+
+.install a {
+  text-decoration: none;
+  color: darkgray;
 }
 
 .playlist ul li a {
@@ -145,6 +169,8 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 2;
 }
 
 footer > div {
