--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ header {
 
 .home-flex:hover {
   color: #a3a3a3;
+  border-left: solid 2px greenyellow;
 }
 
 .add-playlist:hover {
@@ -206,7 +207,7 @@ header {
 }
 
 .list li a:hover {
-  border-bottom: green 2px solid;
+  border-bottom: greenyellow 2px solid;
   color: #a3a3a3;
 }
 
@@ -292,6 +293,18 @@ footer > div {
   color: gray;
 }
 
+.name-song:hover {
+  text-decoration: underline;
+}
+
+.singer:hover {
+  text-decoration: underline;
+}
+
+.footer-icon:hover {
+  color: greenyellow;
+}
+
 .footer-icon {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -304,6 +317,10 @@ footer > div {
 
 .player-simbol p {
   margin: 1rem 1.5rem 0.5rem 1.5rem;
+}
+
+.player-simbol p:hover {
+  color: #a3a3a3;
 }
 
 .player-simbol {
@@ -342,6 +359,10 @@ footer > div {
   width: 40%;
 
   border-radius: 50px;
+}
+
+.volume-item:hover {
+  color: #a3a3a3;
 }
 
 @media screen and (max-width: 1100px) {
