--- a/css/style.css
+++ b/css/style.css
@@ -364,10 +364,42 @@ footer > div {
 }
 
 .duration-bar {
-  border: solid white 3px;
+  background-color: #a3a3a3;
   width: 70%;
   margin-top: 0.5rem;
   border-radius: 50px;
+}
+
+.advancement {
+  display: block;
+  height: 5px;
+  background-color: #ffffff;
+  width: 30%;
+  border-radius: 5px;
+  position: relative;
+}
+
+.advancement-dot {
+  position: absolute;
+  top: 50%;
+  left: 90%;
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: white;
+  transform: translateY(-50%);
+  opacity: 0;
+}
+
+.duration-bar:hover {
+  .advancement-dot {
+    opacity: 1;
+  }
+
+  .advancement {
+    background-color: greenyellow;
+  }
 }
 
 .duration p {
@@ -382,10 +414,24 @@ footer > div {
 }
 
 .sound-bar {
-  border: solid white 3px;
+  background-color: #a3a3a3;
   width: 40%;
 
   border-radius: 50px;
+}
+
+.sound-bar .advancement .advancement-dot {
+  transform: translateY(-45%);
+}
+
+.sound-bar:hover {
+  .advancement-dot {
+    opacity: 1;
+  }
+
+  .advancement {
+    background-color: greenyellow;
+  }
 }
 
 .volume-item:hover {
